added html pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,13 @@
- about
+
+<h1> about </h1>
+
+<p> The Branding Edge is a Design Marketing Firm that takes a brand from start to finish across multiple platforms of communication.
+	</p>
+
+	<div class="footer">
+<small>
+
+	Lovingly Built by The Branding Edge 
+</small>
+	
+</div>
