--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,20 @@
+
 <h1>Welcome to our Application</h1>
-<p>You have found <a href= "http://www.thebrandingedge.com">The Branding Edge </a> application.</p>
+<p>You have found 
+
+	
+<%= link_to "The Branding Edge", "http://www.thebrandingedge.com" %>
+
+	application.</p>
+
+<p> 
+	<%= link_to "Sign Up Now", "#{}"%>
+</p>
+
+<div class="footer">
+<small>
+
+	Lovingly Built by The Branding Edge 
+</small>
+	
+</div>
